--- a/scripts/insolard/insolar_4.yaml
+++ b/scripts/insolard/insolar_4.yaml
@@ -6,6 +6,8 @@ ledger:
     datadirectory: scripts/insolard/nodes/4/data
 log:
   level: Debug
+  adapter: promtail
+  agent: http://localhost:3100/api/prom/push
 logicrunner:
   rpclisten: 127.0.0.1:48182
   goplugin:
