--- a/ci/alpha.yml
+++ b/ci/alpha.yml
@@ -81,6 +81,7 @@ jobs:
           - |
             cp master/.git/short_ref deploy/tag
             cp adm/manifests/block-explorer/bootstrap-ss.yaml deploy/bootstrap.yaml
+            cp adm/manifests/block-explorer/pulsar.yaml deploy/pulsar.yaml
             ls -alh
             sed -i "s/registry.insolar.io\/insolard/registry.insolar.io\/insolard:$(cat deploy/tag)/g" deploy/bootstrap.yaml
             sed -i "s/registry.insolar.io\/insolard/registry.insolar.io\/insolard:$(cat deploy/tag)/g" deploy/pulsar.yaml
