--- a/ci/block-explorer.yml
+++ b/ci/block-explorer.yml
@@ -116,7 +116,7 @@ resources:
   type: git
   source:
     uri: https://github.com/insolar/insolar.git
-    branch: release/v0.7.0-alpha
+    branch: release
 
 - name: registry-explorer
   type: docker-image
@@ -389,7 +389,7 @@ jobs:
   plan:
   - get: nexus-unloader
     passed: [build-unloader]
-    trigger: true
+    trigger: false
   - get: git-db-unloader
     trigger: false
   - get: adm
@@ -430,13 +430,14 @@ jobs:
   - put: k8s
     params:
       namespace: ((meta.kubernetes.block-explorer.namespace))
+      wait_until_ready_selector: app=db-unloader
       kubectl: apply -f artifacts/db-unloader.yaml
 
 - name: pack-loader
   plan:
   - get: nexus-loader
     passed: [build-loader]
-    trigger: true
+    trigger: false
   - get: git-db-loader
     trigger: false
   - get: adm
@@ -479,12 +480,13 @@ jobs:
   - put: k8s
     params:
       namespace: ((meta.kubernetes.block-explorer.namespace))
+      wait_until_ready_selector: app=db-loader
       kubectl: apply -f artifacts/db-loader.yaml
 
 - name: build-explorer
   plan:
     - get: git-explorer
-      trigger: true
+      trigger: false
     - get: adm
       trigger: false
     - task: build-explorer
@@ -538,13 +540,14 @@ jobs:
     - put: k8s
       params:
         namespace: ((meta.kubernetes.block-explorer.namespace))
+        wait_until_ready_selector: app=explorer
         kubectl: apply -f artifacts/explorer.yaml
 
 - name: insolard
   public: true
   plan:
   - get: git-insolar
-    trigger: true
+    trigger: false
   - get: adm
     trigger: false
   - put: registry-insolard
