--- a/ci/block-explorer.yml
+++ b/ci/block-explorer.yml
@@ -116,7 +116,9 @@ resources:
   type: git
   source:
     uri: https://github.com/insolar/insolar.git
-    branch: release
+    #branch: release
+    branch: master
+    tag_filter: v0.7.6
 
 - name: registry-explorer
   type: docker-image
