--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,29 @@
 .DS_Store
 
 ### IntelliJ project files
-.idea
-*.iml
+# based on  https://github.com/github/gitignore/blob/master/Global/JetBrains.gitignore
+#.idea
+#*.iml
 out
 .gen
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
+# Generated files
+.idea/**/contentModel.xml
+
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
 
 ### VSCode configuration
 .vscode
