WLT-308: added MDAdmin; set 10 oracles except 3

--- a/scripts/insolard/genesis.yaml
+++ b/scripts/insolard/genesis.yaml
@@ -1,5 +1,9 @@
 root_keys_file: "scripts/insolard/configs/root_member_keys.json"
+md_admin_keys_file: "scripts/insolard/configs/md_admin_member_keys.json"
 oracle_keys_file:
+  -
+    name: "oracle0"
+    keys_file: "scripts/insolard/configs/oracle0_member_keys.json"
   -
     name: "oracle1"
     keys_file: "scripts/insolard/configs/oracle1_member_keys.json"
@@ -9,6 +13,26 @@ oracle_keys_file:
   -
     name: "oracle3"
     keys_file: "scripts/insolard/configs/oracle3_member_keys.json"
+  -
+    name: "oracle4"
+    keys_file: "scripts/insolard/configs/oracle4_member_keys.json"
+  -
+    name: "oracle5"
+    keys_file: "scripts/insolard/configs/oracle5_member_keys.json"
+  -
+    name: "oracle6"
+    keys_file: "scripts/insolard/configs/oracle6_member_keys.json"
+  -
+    name: "oracle7"
+    keys_file: "scripts/insolard/configs/oracle7_member_keys.json"
+  -
+    name: "oracle8"
+    keys_file: "scripts/insolard/configs/oracle8_member_keys.json"
+  -
+    name: "oracle9"
+    keys_file: "scripts/insolard/configs/oracle9_member_keys.json"
+
+
 
 discovery_keys_dir: "scripts/insolard/reusekeys/discovery"
 keys_name_format: "/node_%02d.json"
