--- a/scripts/insolard/genesis.yaml
+++ b/scripts/insolard/genesis.yaml
@@ -4,33 +4,33 @@ oracle_keys_file:
   -
     name: "oracle0"
     keys_file: "scripts/insolard/configs/oracle0_member_keys.json"
-  -
-    name: "oracle1"
-    keys_file: "scripts/insolard/configs/oracle1_member_keys.json"
-  -
-    name: "oracle2"
-    keys_file: "scripts/insolard/configs/oracle2_member_keys.json"
-  -
-    name: "oracle3"
-    keys_file: "scripts/insolard/configs/oracle3_member_keys.json"
-  -
-    name: "oracle4"
-    keys_file: "scripts/insolard/configs/oracle4_member_keys.json"
-  -
-    name: "oracle5"
-    keys_file: "scripts/insolard/configs/oracle5_member_keys.json"
-  -
-    name: "oracle6"
-    keys_file: "scripts/insolard/configs/oracle6_member_keys.json"
-  -
-    name: "oracle7"
-    keys_file: "scripts/insolard/configs/oracle7_member_keys.json"
-  -
-    name: "oracle8"
-    keys_file: "scripts/insolard/configs/oracle8_member_keys.json"
-  -
-    name: "oracle9"
-    keys_file: "scripts/insolard/configs/oracle9_member_keys.json"
+#  -
+#    name: "oracle1"
+#    keys_file: "scripts/insolard/configs/oracle1_member_keys.json"
+#  -
+#    name: "oracle2"
+#    keys_file: "scripts/insolard/configs/oracle2_member_keys.json"
+#  -
+#    name: "oracle3"
+#    keys_file: "scripts/insolard/configs/oracle3_member_keys.json"
+#  -
+#    name: "oracle4"
+#    keys_file: "scripts/insolard/configs/oracle4_member_keys.json"
+#  -
+#    name: "oracle5"
+#    keys_file: "scripts/insolard/configs/oracle5_member_keys.json"
+#  -
+#    name: "oracle6"
+#    keys_file: "scripts/insolard/configs/oracle6_member_keys.json"
+#  -
+#    name: "oracle7"
+#    keys_file: "scripts/insolard/configs/oracle7_member_keys.json"
+#  -
+#    name: "oracle8"
+#    keys_file: "scripts/insolard/configs/oracle8_member_keys.json"
+#  -
+#    name: "oracle9"
+#    keys_file: "scripts/insolard/configs/oracle9_member_keys.json"
 
 
 
